--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 Flask==3.0.0
 flask-cors==4.0.0
 python-dotenv==1.0.0
-mysql-connector-python==8.2.0
-pandas==2.1.4
-matplotlib==3.8.2
-seaborn==0.13.0
+mysql-connector-python==9.1.0
+pandas==2.2.3
+matplotlib==3.9.0
+seaborn==0.13.2
+numpy==2.1.0
 gunicorn==21.2.0
